--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,13 @@
 
     <string name="sin_informacion">Sin información</string>
 
+    <string name="title_activity_fullscreen">FullscreenActivity</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="intro_splash">Bienvenido al Simulador que le permitirá conocer cuanto costará su seguro médico en el futuro en México</string>
+    <string name="cuantas_personas_est_n_aseguradas_en_su_poliza">¿Cuantas personas están aseguradas en su poliza?</string>
+
 </resources>
