--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="intro_splash">Bienvenido al Simulador que le permitirá conocer cuanto costará su seguro médico en el futuro en México</string>
     <string name="cuantas_personas_est_n_aseguradas_en_su_poliza">¿Cuantas personas están aseguradas en su poliza?</string>
+    <string name="mail_gun_api_key">key-308c17c10c62be40cb2cb4bf28455b59</string>
+    <string name="mail_domain">sandbox438512ccdfec4b20b1dee1682c4f757e.mailgun.org</string>
 
 </resources>
