details. 100% Finished. Beta Version

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ProyecccionDeGastos</string>
+    <string name="app_name">Janem</string>
     <string name="title_home">Datos</string>
     <string name="title_resumen">Resumen</string>
     <string name="title_data">Data</string>
